[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/hoveroption.png" type="Texture" id=1]
[ext_resource path="res://UI/pressedoption.png" type="Texture" id=2]
[ext_resource path="res://UI/option.png" type="Texture" id=3]
[ext_resource path="res://Title_screen/image 4.png" type="Texture" id=4]
[ext_resource path="res://Font/new_dynamicfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Font/pixellegacy.tres" type="DynamicFont" id=6]
[ext_resource path="res://Title_screen/FadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://Title_screen/TitleScreen.gd" type="Script" id=8]
[ext_resource path="res://save/GameSaver.tscn" type="PackedScene" id=9]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 241.0
margin_bottom = 135.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 1.0
margin_right = 240.0
margin_bottom = 133.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 239.0

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 4.0
margin_right = 239.0
margin_bottom = 133.0
size_flags_vertical = 3

[node name="Button" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 55.0
margin_bottom = 129.0

[node name="Continue" type="TextureButton" parent="Menu/CenterRow/Button"]
margin_right = 55.0
margin_bottom = 8.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="Label" type="Label" parent="Menu/CenterRow/Button/Continue"]
margin_left = 6.75408
margin_top = -1.85406
margin_right = 47.7541
margin_bottom = 12.1459
custom_fonts/font = ExtResource( 5 )
text = "CONTINUE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Game" type="TextureButton" parent="Menu/CenterRow/Button"]
margin_top = 12.0
margin_right = 55.0
margin_bottom = 20.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="Label" type="Label" parent="Menu/CenterRow/Button/New Game"]
margin_left = 6.75408
margin_top = -1.85406
margin_right = 47.7541
margin_bottom = 12.1459
custom_fonts/font = ExtResource( 5 )
text = "NEW GAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load Game" type="TextureButton" parent="Menu/CenterRow/Button"]
margin_top = 24.0
margin_right = 55.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="Label" type="Label" parent="Menu/CenterRow/Button/Load Game"]
margin_left = 6.75408
margin_top = -1.85406
margin_right = 47.7541
margin_bottom = 12.1459
custom_fonts/font = ExtResource( 5 )
text = "LOAD GAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Setting" type="TextureButton" parent="Menu/CenterRow/Button"]
margin_top = 36.0
margin_right = 55.0
margin_bottom = 44.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="Label" type="Label" parent="Menu/CenterRow/Button/Setting"]
margin_left = 6.75408
margin_top = -1.85406
margin_right = 47.7541
margin_bottom = 12.1459
custom_fonts/font = ExtResource( 5 )
text = "SETTING"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Menu/CenterRow/Button"]
margin_top = 48.0
margin_right = 55.0
margin_bottom = 56.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="Label" type="Label" parent="Menu/CenterRow/Button/Exit"]
margin_left = 6.75408
margin_top = -1.85406
margin_right = 47.7541
margin_bottom = 12.1459
custom_fonts/font = ExtResource( 5 )
text = "EXIT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 1.77859
margin_top = 113.827
margin_right = 53.7786
margin_bottom = 132.827
custom_fonts/font = ExtResource( 6 )
text = "Version 0.01
Pixel Project Blue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" parent="." instance=ExtResource( 7 )]

[node name="GameSaver" parent="." instance=ExtResource( 9 )]

[node name="Black" type="ColorRect" parent="."]
visible = false
margin_right = 239.0
margin_bottom = 136.0
color = Color( 0, 0, 0, 0.247059 )
[connection signal="pressed" from="Menu/CenterRow/Button/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Button/New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Button/Load Game" to="." method="_on_Load_Game_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Button/Exit" to="." method="_on_Exit_pressed"]
